[java] migrate codebase to java 17